--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,18 +1,67 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    android:padding="16dp"
+    android:background="@drawable/background_color_login">
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:text="Login Page"
+        android:id="@+id/text_loginpage"
+        android:textSize="20sp"
+        android:textColor="@color/white"
+        android:layout_marginTop="60dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:hint="Email ID"
+        android:textColor="@color/white"
+        android:textColorHint="@color/white"
+        android:id="@+id/edit_emailid"
+        app:layout_constraintTop_toBottomOf="@+id/text_loginpage"
+        android:textSize="16sp"/>
+
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:id="@+id/edit_password"
+        android:textColor="@color/white"
+        android:textColorHint="@color/white"
+        android:hint="Password"
+        app:layout_constraintTop_toBottomOf="@+id/edit_emailid"
+        android:textSize="16sp"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:paddingLeft="20dp"
+        android:textColor="@color/white"
+        android:textSize="16sp"
+        android:id="@+id/text_forgotpassword"
+        app:layout_constraintTop_toBottomOf="@+id/edit_password"
+        android:text="Forgot Password"/>
+
+
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Login"
+        android:textColor="@color/white"
+        android:background="@drawable/rounded_button"
+        android:textSize="16sp"
+        android:id="@+id/buttonLogin"
+        android:layout_marginTop="50dp"
+        android:textAllCaps="false"
+        app:layout_constraintTop_toBottomOf="@+id/text_forgotpassword"/>
 
 </android.support.constraint.ConstraintLayout>
