--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -26,8 +26,10 @@
         android:textColor="@color/white"
         android:textColorHint="@color/white"
         android:id="@+id/edit_emailid"
+        android:inputType="text"
         app:layout_constraintTop_toBottomOf="@+id/text_loginpage"
-        android:textSize="16sp"/>
+        android:textSize="16sp"
+        android:autofillHints="Email" />
 
     <EditText
         android:layout_width="match_parent"
@@ -37,16 +39,19 @@
         android:textColor="@color/white"
         android:textColorHint="@color/white"
         android:hint="Password"
+        android:inputType="textPassword"
         app:layout_constraintTop_toBottomOf="@+id/edit_emailid"
-        android:textSize="16sp"/>
+        android:textSize="16sp"
+        android:autofillHints="Password" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:paddingLeft="20dp"
         android:textColor="@color/white"
         android:textSize="16sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         android:id="@+id/text_forgotpassword"
         app:layout_constraintTop_toBottomOf="@+id/edit_password"
         android:text="Forgot Password"/>
@@ -64,4 +69,4 @@
         android:textAllCaps="false"
         app:layout_constraintTop_toBottomOf="@+id/text_forgotpassword"/>
 
-</android.support.constraint.ConstraintLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
