--- a/app/src/main/res/drawable/rounded_lightyellow_background.xml
+++ b/app/src/main/res/drawable/rounded_lightyellow_background.xml
@@ -4,5 +4,5 @@
     <stroke android:width="1dp" android:color="#FF404040" />
     <corners android:radius="20dp" />
     <solid
-        android:color="@color/black"/>
+        android:color="@color/lightYellow"/>
 </shape>
