--- a/app/src/main/res/layout/acitivity_login_page.xml
+++ b/app/src/main/res/layout/acitivity_login_page.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/background_color_login"
+    android:background="@drawable/purple_background"
     android:padding="16dp">
 
     <TextView
@@ -11,6 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="40dp"
+        android:fontFamily="@font/fredoka_one"
         android:gravity="center"
         android:text="Login Page"
         android:textColor="@color/white"
@@ -32,6 +33,7 @@
             android:autofillHints="Email"
             android:drawableLeft="@drawable/email_icon"
             android:drawablePadding="10dp"
+            android:fontFamily="@font/arvo"
             android:hint="Email ID"
             android:inputType="textEmailAddress"
             android:textColor="@color/white"
@@ -47,6 +49,7 @@
             android:autofillHints="Password"
             android:drawableLeft="@drawable/password_icon"
             android:drawablePadding="10dp"
+            android:fontFamily="@font/arvo"
             android:hint="Password"
             android:inputType="textPassword"
             android:textColor="@color/white"
@@ -59,6 +62,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
+            android:fontFamily="@font/arvo"
             android:text="Forgot Password"
             android:textColor="@color/white"
             android:textSize="16sp"
@@ -73,10 +77,11 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="50dp"
-            android:background="@drawable/rounded_button"
+            android:background="@drawable/rounded_white_background"
+            android:fontFamily="@font/arvo"
             android:text="Login"
             android:textAllCaps="false"
-            android:textColor="@color/white"
+            android:textColor="@color/black"
             android:textSize="16sp"
             app:layout_constraintTop_toBottomOf="@+id/text_forgotpassword" />
 
@@ -85,6 +90,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="40dp"
+            android:fontFamily="@font/arvo"
             android:gravity="end"
             android:text="@string/create_an_account_text"
             android:textColor="@color/white"
