--- a/app/src/main/res/layout/select_role_fragment.xml
+++ b/app/src/main/res/layout/select_role_fragment.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/background_color_login"
+    android:background="@drawable/purple_background"
     android:padding="16dp">
 
 
@@ -11,13 +12,14 @@
         android:id="@+id/select_role_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
         android:layout_marginBottom="10dp"
+        android:fontFamily="@font/fredoka_one"
         android:gravity="center"
         android:text="@string/select_role_text"
         android:textColor="@color/white"
         android:textSize="20dp"
-        app:layout_constraintBottom_toTopOf="@+id/select_role_text_desc" />
+        app:layout_constraintBottom_toTopOf="@+id/select_role_text_desc"
+        tools:layout_editor_absoluteX="16dp" />
 
     <TextView
         android:id="@+id/select_role_text_desc"
@@ -25,6 +27,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:layout_marginBottom="40dp"
+        android:fontFamily="@font/fredoka_one"
         android:gravity="center"
         android:text="@string/select_role_text_desc"
         android:textColor="@color/white"
@@ -59,6 +62,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
+                android:fontFamily="@font/arvo"
                 android:gravity="center"
                 android:text="@string/advocate_role_text"
                 android:textColor="@color/black"
@@ -76,6 +80,7 @@
             app:layout_constraintTop_toBottomOf="@+id/layout_role1">
 
             <ImageView
+                android:id="@+id/img_civilian"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:layout_marginLeft="10dp"
@@ -87,20 +92,24 @@
 
             <TextView
                 android:id="@+id/text_civilianerole"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:gravity="center"
+                android:fontFamily="@font/arvo"
                 android:text="@string/civilian_role_text"
                 android:textColor="@color/black"
                 android:textSize="25dp"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
                 android:id="@+id/text_civilianerole_description"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="bottom"
+                android:fontFamily="@font/arvo"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintLeft_toRightOf="@+id/img_civilian"
                 android:gravity="center"
                 android:text="@string/civilian_role_text_desc"
                 android:textColor="@color/black"
@@ -113,7 +122,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="40dp"
-            android:background="@drawable/rounded_button"
+            android:background="@drawable/rounded_white_background"
+            android:fontFamily="@font/arvo"
             android:text="CONTINUE"
             android:textSize="16dp"
             app:layout_constraintTop_toBottomOf="@+id/layout_role2" />
