--- a/app/src/main/res/layout/select_role_fragment.xml
+++ b/app/src/main/res/layout/select_role_fragment.xml
@@ -66,7 +66,7 @@
                 android:gravity="center"
                 android:text="@string/advocate_role_text"
                 android:textColor="@color/black"
-                android:textSize="25dp" />
+                android:textSize="20sp" />
         </LinearLayout>
 
 
@@ -97,7 +97,9 @@
                 android:fontFamily="@font/arvo"
                 android:text="@string/civilian_role_text"
                 android:textColor="@color/black"
-                android:textSize="25dp"
+                android:textSize="20sp"
+                android:gravity="center"
+                android:paddingTop="5dp"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -121,11 +123,11 @@
             android:id="@+id/button_continue"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="40dp"
+            android:layout_marginTop="60dp"
             android:background="@drawable/rounded_white_background"
             android:fontFamily="@font/arvo"
             android:text="CONTINUE"
-            android:textSize="16dp"
+            android:textSize="16sp"
             app:layout_constraintTop_toBottomOf="@+id/layout_role2" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
