--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,6 +6,9 @@
     <color name="white">#FFFFFF</color>
     <color name="black">#000000</color>
     <color name="lightYellow">#e98657</color>
+    <color name="grey_background">#f5f5f5</color>
+    <color name="blue">#1886f7</color>
+
 
     <!-- 1st Gradient color -->
     <color name="colorPurple_A400">#D500F9</color>
