--- a/app/src/main/res/layout/activity_dash_board.xml
+++ b/app/src/main/res/layout/activity_dash_board.xml
@@ -56,6 +56,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        app:layout_constraintTop_toBottomOf="@+id/search_framelayout_container"
-        />
+        android:paddingBottom="140dp"
+        app:layout_constraintTop_toBottomOf="@+id/search_framelayout_container"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
