--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,6 +8,7 @@
     <color name="lightYellow">#e98657</color>
     <color name="grey_background">#f5f5f5</color>
     <color name="blue">#1886f7</color>
+    <color name="yellow">#febd2e</color>
 
 
     <!-- 1st Gradient color -->
