--- a/app/src/main/res/layout/activity_dash_board.xml
+++ b/app/src/main/res/layout/activity_dash_board.xml
@@ -5,51 +5,16 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/grey_background"
-    android:padding="16dp"
+    android:paddingStart="16dp"
+    android:paddingEnd="16dp"
     tools:context=".DashBoardActivity">
-
-    <TextView
-        android:id="@+id/home_toolbat_text_name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Home"
-        android:textColor="@color/black"
-        android:textSize="24sp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <ImageView
-        android:layout_width="25dp"
-        android:layout_height="25dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintRight_toLeftOf="@+id/whatsapp_img"
-        android:layout_marginRight="10dp"
-        android:src="@drawable/notice_icon"/>
-
-    <ImageView
-        android:layout_width="25dp"
-        android:layout_height="25dp"
-        android:id="@+id/whatsapp_img"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginRight="10dp"
-        app:layout_constraintRight_toLeftOf="@+id/profile_img"
-        android:src="@drawable/whatsapp_icon"/>
-
-    <ImageView
-        android:layout_width="25dp"
-        android:layout_height="25dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        android:id="@+id/profile_img"
-        android:src="@drawable/profile_icon"/>
 
     <FrameLayout
         android:id="@+id/search_framelayout_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
-        app:layout_constraintTop_toBottomOf="@+id/home_toolbat_text_name" />
+        app:layout_constraintTop_toTopOf="parent"
+         />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_case_view"
