--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -27,6 +27,10 @@
         <item name="android:textSize">20sp</item>
     </style>
 
+    <style name="tablayoutTextApperance" parent="TextAppearance.Design.Tab">
+        <item name="android:textSize">10sp</item>
+    </style>
+
 
 
 
