--- a/app/src/main/res/layout/task_dialog.xml
+++ b/app/src/main/res/layout/task_dialog.xml
@@ -22,4 +22,14 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/edit_task_title" />
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="ADD DATE"
+        android:padding="4dp"
+        android:id="@+id/add_date_text"
+        android:background="#f5f5f5"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/edit_task_title"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
