--- a/app/src/main/res/layout/task_list_recyclerview.xml
+++ b/app/src/main/res/layout/task_list_recyclerview.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -29,10 +30,12 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="date"
+                android:padding="4dp"
+                android:background="#f5f5f5"
                 app:layout_constraintLeft_toLeftOf="parent"
                 android:layout_marginTop="20dp"
                 app:layout_constraintTop_toBottomOf="@+id/text_title"
-                android:id="@+id/tasklist_date_text"/>
+                android:id="@+id/display_date_text"/>
 
             <ImageView
                 android:layout_width="14dp"
