--- a/app/src/main/res/layout/activity_dash_board.xml
+++ b/app/src/main/res/layout/activity_dash_board.xml
@@ -7,7 +7,7 @@
     android:background="@color/grey_background"
     android:paddingStart="16dp"
     android:paddingEnd="16dp"
-    tools:context=".DashBoardActivity">
+    tools:context=".Activity.DashBoardActivity">
 
     <FrameLayout
         android:id="@+id/search_framelayout_container"
