--- a/app/src/main/res/layout/hearing_fragment.xml
+++ b/app/src/main/res/layout/hearing_fragment.xml
@@ -6,15 +6,14 @@
     android:layout_height="match_parent"
     android:background="@color/grey_background"
     android:paddingStart="16dp"
-    android:paddingEnd="16dp"
-    tools:context=".Activity.DashBoardActivity">
+    android:paddingEnd="16dp">
 
     <FrameLayout
         android:id="@+id/search_framelayout_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent"
-         />
+        />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_case_view"
