--- a/app/src/main/res/layout/appointment_dialog.xml
+++ b/app/src/main/res/layout/appointment_dialog.xml
@@ -1,50 +1,71 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="16dp">
+    android:padding="16dp"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
 
     <EditText
-        android:id="@+id/edit_task_title"
+        android:id="@+id/edit_appointment_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:background="@drawable/editext_rounded_shape"
-        android:hint=" Task Title"
+        android:hint=" Appointment Title"
         android:padding="16dp"
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/edit_task_desc"
+        android:id="@+id/edit_appointment_desc"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:background="@drawable/editext_rounded_shape"
-        android:hint=" Task Description"
+        android:hint=" Appointment Description"
         android:padding="16dp"
-        app:layout_constraintTop_toBottomOf="@+id/edit_task_title" />
+        app:layout_constraintTop_toBottomOf="@+id/edit_appointment_title" />
 
     <EditText
-        android:id="@+id/edit_task_date"
+        android:id="@+id/edit_appointment_date"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
+        android:editable="false"
         android:background="@drawable/editext_rounded_shape"
         android:hint="Select Date"
         android:padding="16dp"
-        app:layout_constraintTop_toBottomOf="@+id/edit_task_desc" />
+        app:layout_constraintTop_toBottomOf="@+id/edit_appointment_desc" />
 
     <EditText
-        android:id="@+id/edit_task_assignto"
+        android:id="@+id/edit_apt_client_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:background="@drawable/editext_rounded_shape"
-        android:hint="Assign To.."
+        android:hint="Client Name"
         android:padding="16dp"
-        app:layout_constraintTop_toBottomOf="@+id/edit_task_date" />
+        app:layout_constraintTop_toBottomOf="@+id/edit_appointment_date" />
+
+    <EditText
+        android:id="@+id/edit_apt_client_mb_no"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:background="@drawable/editext_rounded_shape"
+        android:hint="Client Mobile No"
+        android:padding="16dp"
+        app:layout_constraintTop_toBottomOf="@+id/edit_apt_client_name" />
+
+    <EditText
+        android:id="@+id/edit_apt_client_email"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:background="@drawable/editext_rounded_shape"
+        android:hint="Client Email"
+        android:padding="16dp"
+        app:layout_constraintTop_toBottomOf="@+id/edit_apt_client_mb_no" />
 
     <Button
         android:id="@+id/button_save"
@@ -56,7 +77,6 @@
         android:textAllCaps="false"
         android:textColor="@color/black"
         android:textSize="20sp"
-        app:layout_constraintTop_toBottomOf="@+id/edit_task_assignto" />
-
+        app:layout_constraintTop_toBottomOf="@+id/edit_apt_client_email" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
