task and appointment validation is added

--- a/app/src/main/res/layout/appointment_dialog.xml
+++ b/app/src/main/res/layout/appointment_dialog.xml
@@ -11,6 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
+        android:inputType="text"
         android:background="@drawable/editext_rounded_shape"
         android:hint=" Appointment Title"
         android:padding="16dp"
@@ -20,6 +21,7 @@
         android:id="@+id/edit_appointment_desc"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:inputType="text"
         android:layout_marginTop="20dp"
         android:background="@drawable/editext_rounded_shape"
         android:hint=" Appointment Description"
@@ -42,6 +44,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
+        android:inputType="textPersonName"
         android:background="@drawable/editext_rounded_shape"
         android:hint="Client Name"
         android:padding="16dp"
@@ -52,6 +55,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
+        android:inputType="numberDecimal"
         android:background="@drawable/editext_rounded_shape"
         android:hint="Client Mobile No"
         android:padding="16dp"
@@ -62,6 +66,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
+        android:inputType="textEmailAddress"
         android:background="@drawable/editext_rounded_shape"
         android:hint="Client Email"
         android:padding="16dp"
