--- a/app/src/main/res/layout/task_dialog.xml
+++ b/app/src/main/res/layout/task_dialog.xml
@@ -14,6 +14,7 @@
         android:background="@drawable/editext_rounded_shape"
         android:hint=" Task Title"
         android:padding="16dp"
+        android:inputType="text"
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
@@ -21,6 +22,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
+        android:inputType="text"
         android:background="@drawable/editext_rounded_shape"
         android:hint=" Task Description"
         android:padding="16dp"
@@ -43,6 +45,7 @@
         android:layout_marginTop="20dp"
         android:background="@drawable/editext_rounded_shape"
         android:hint="Assign To.."
+        android:inputType="text"
         android:padding="16dp"
         app:layout_constraintTop_toBottomOf="@+id/edit_task_date" />
 
