--- a/app/src/main/res/layout/add_case_fragment1.xml
+++ b/app/src/main/res/layout/add_case_fragment1.xml
@@ -88,11 +88,22 @@
         android:layout_height="wrap_content"
         android:text="Select Category"
         android:id="@+id/text_select_category"
-        app:layout_constraintTop_toBottomOf="@+id/edit_select_team"
+        app:layout_constraintTop_toBottomOf="@+id/edit_case_date"
         app:layout_constraintLeft_toLeftOf="parent"
         android:textSize="16sp"
         android:textStyle="bold"
         android:layout_marginTop="10dp"/>
+
+    <TextView
+        android:id="@+id/edit_case_date"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:background="@drawable/editext_rounded_shape"
+        android:hint="Select Hearing Date"
+        android:padding="16dp"
+        app:layout_constraintTop_toBottomOf="@+id/edit_select_team" />
+
 
     <RadioGroup
         android:layout_width="match_parent"
@@ -103,12 +114,14 @@
         app:layout_constraintTop_toBottomOf="@+id/text_select_category">
 
         <RadioButton
+            android:id="@+id/pending_radio"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="18sp"
             android:text="Pending"/>
 
         <RadioButton
+            android:id="@+id/dispose_radio"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="18sp"
@@ -118,6 +131,7 @@
     </RadioGroup>
 
     <Button
+        android:id="@+id/continueBtn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/continue_text"
