--- a/app/src/main/res/layout/hearing_fragment.xml
+++ b/app/src/main/res/layout/hearing_fragment.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:background="@color/grey_background"
     android:paddingStart="16dp"
     android:paddingEnd="16dp">
@@ -18,18 +17,11 @@
         android:layout_marginTop="10dp"
         android:id="@+id/add_hearing_button"/>
 
-    <FrameLayout
-        android:id="@+id/search_framelayout_container"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/add_hearing_button"
-        />
-
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_hearing_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:paddingBottom="140dp"
-        app:layout_constraintTop_toBottomOf="@+id/search_framelayout_container"/>
+        android:paddingBottom="56dp"
+        app:layout_constraintTop_toBottomOf="@+id/add_hearing_button"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
