validation is added for case form

--- a/app/src/main/res/layout/add_case_fragment1.xml
+++ b/app/src/main/res/layout/add_case_fragment1.xml
@@ -15,6 +15,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
+        android:inputType="text"
         android:background="@drawable/editext_rounded_shape"
         android:hint="Enter Case No"
         android:padding="16dp"
@@ -26,6 +27,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
+        android:inputType="textPersonName"
         android:background="@drawable/editext_rounded_shape"
         android:hint="Enter Court Name"
         android:padding="16dp"
@@ -36,6 +38,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
+        android:inputType="textPersonName"
         android:background="@drawable/editext_rounded_shape"
         android:hint="Enter Judge Name"
         android:padding="16dp"
@@ -46,6 +49,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
+        android:inputType="textPersonName"
         android:background="@drawable/editext_rounded_shape"
         android:hint="Enter Party1 Name"
         android:padding="16dp"
@@ -56,6 +60,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
+        android:inputType="textPersonName"
         android:background="@drawable/editext_rounded_shape"
         android:hint="Enter Party2 Name"
         android:padding="16dp"
@@ -67,6 +72,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
+        android:inputType="textPersonName"
         android:background="@drawable/editext_rounded_shape"
         android:hint="Enter Lawyer Name"
         android:padding="16dp"
@@ -77,6 +83,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
+        android:inputType="textPersonName"
         android:background="@drawable/editext_rounded_shape"
         android:hint="Select Team"
         android:padding="16dp"
