--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -6,22 +6,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="16dp"
-    android:background="#aeaeac"
+    android:background="@drawable/purple_background"
     tools:context=".Activity.ProfileActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="User Profile"
-        android:textStyle="italic"
-        android:fontFamily="@font/fredoka_one"
-        android:textColor="@color/black"
-        android:id="@+id/user_profile_text"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="20dp"
-        android:textSize="40sp"/>
 
     <ImageView
         android:layout_width="200dp"
@@ -30,8 +17,8 @@
         android:background="@drawable/user_default"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/user_profile_text"
-        android:layout_marginTop="20dp"/>
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="30dp"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -40,6 +27,8 @@
         android:text="User Name"
         android:layout_marginTop="10dp"
         android:fontFamily="@font/arvo"
+        android:textStyle="bold"
+        android:textColor="@color/white"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         android:textSize="20sp"
@@ -50,8 +39,10 @@
         android:layout_height="wrap_content"
         android:id="@+id/text_email"
         android:text="Email Id"
-        android:layout_marginTop="5dp"
+        android:layout_marginTop="10dp"
+        android:textStyle="bold"
         android:fontFamily="@font/arvo"
+        android:textColor="@color/white"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         android:textSize="20sp"
@@ -69,6 +60,6 @@
         android:fontFamily="@font/arvo"
         android:textAllCaps="false"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:background="@drawable/rounded_yellow_background"/>
+        android:background="@drawable/rounded_white_background"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
