--- a/app/src/main/res/layout/appointment_dialog.xml
+++ b/app/src/main/res/layout/appointment_dialog.xml
@@ -72,6 +72,17 @@
         android:padding="16dp"
         app:layout_constraintTop_toBottomOf="@+id/edit_apt_client_mb_no" />
 
+    <EditText
+        android:id="@+id/edit_add_note"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:background="@drawable/editext_rounded_shape"
+        android:hint="Add Note Here.."
+        android:inputType="text"
+        android:padding="16dp"
+        app:layout_constraintTop_toBottomOf="@+id/edit_apt_client_email" />
+
     <Button
         android:id="@+id/button_save"
         android:layout_width="match_parent"
@@ -82,6 +93,6 @@
         android:textAllCaps="false"
         android:textColor="@color/black"
         android:textSize="20sp"
-        app:layout_constraintTop_toBottomOf="@+id/edit_apt_client_email" />
+        app:layout_constraintTop_toBottomOf="@+id/edit_add_note" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
