--- a/app/src/main/res/layout/add_case_fragment1.xml
+++ b/app/src/main/res/layout/add_case_fragment1.xml
@@ -90,6 +90,8 @@
         android:padding="16dp"
         app:layout_constraintTop_toBottomOf="@id/edit_lawyer" />
 
+
+
     <TextView
         android:id="@+id/selectedTeamText"
         android:layout_width="match_parent"
@@ -105,6 +107,32 @@
 
 
     <TextView
+        android:id="@+id/edit_select_client"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:inputType="textPersonName"
+        android:background="@drawable/editext_rounded_shape"
+        android:hint="Select Client"
+        android:editable="false"
+        android:padding="16dp"
+        app:layout_constraintTop_toBottomOf="@id/selectedTeamText" />
+
+    <TextView
+        android:id="@+id/selectedCivilianText"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:text="Selected Civilian : "
+        android:visibility="gone"
+        android:textSize="20sp"
+        android:textColor="@color/blue"
+        android:background="@drawable/editext_rounded_shape"
+        android:padding="16dp"
+        app:layout_constraintTop_toBottomOf="@+id/edit_select_client" />
+
+
+    <TextView
         android:id="@+id/edit_case_date"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -112,7 +140,7 @@
         android:background="@drawable/editext_rounded_shape"
         android:hint="Select Hearing Date"
         android:padding="16dp"
-        app:layout_constraintTop_toBottomOf="@+id/selectedTeamText" />
+        app:layout_constraintTop_toBottomOf="@+id/selectedCivilianText" />
 
     <TextView
         android:layout_width="wrap_content"
